# arbitrum-devtooling-workshop

./: .gitignore  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: arbitrum-dep-update.yml
contracts/contract-solidity/counter/: .solhint.json  foundry.toml  package.json
contracts/contract-solidity/counter/src/: Counter.sol
contracts/contract-solidity/counter/test/: Counter.t.sol  foundry.toml
contracts/contract-stylus/counter/: Cargo.toml  package.json  rust-toolchain.toml
contracts/contract-stylus/counter/src/: lib.rs
examples/: counter.rs
frontend/: eslint.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx
frontend/src/abi/: Counter.json
frontend/src/components/: Counter.tsx  ETHBalance.tsx  Footer.tsx  Layout.tsx
frontend/src/config/: contracts.ts
frontend/src/contexts/: Web3Context.tsx
frontend/src/pages/: SolidityCounterPage.tsx  StylusCounterPage.tsx
frontend/src/types/: viem.d.ts
frontend/src/utils/: format.tsx
