[package]
name = "stylus-hello-world"
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "1.5.6"
alloy-sol-types = "1.5.6"
stylus-sdk = "0.10.0"
hex = { version = "0.4", default-features = false }

[dev-dependencies]
alloy-primitives = { version = "1.5.6", features = ["sha3-keccak"] }
alloy = { version = "1.6.3", features = ["provider-http", "signer-local", "sol-types", "contract"] }
tokio = { version = "1.43.0", features = ["full"] }
eyre = "0.6.12"
stylus-sdk = { version = "0.10.0", features = ["stylus-test"] }
dotenv = "0.15.0"

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
